working on bonus

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .DS_Store
 EmployeeSQL/cred.py
 EmployeeSQL/.ipynb_checkpoints/cred-checkpoint.py
+EmployeeSQL/.ipynb_checkpoints/bonus-checkpoint.ipynb
+EmployeeSQL/__pycache__/cred.cpython-39.pyc
+EmployeeSQL/.ipynb_checkpoints/bonus-checkpoint.ipynb
+EmployeeSQL/.ipynb_checkpoints/bonus-checkpoint.ipynb
